--- a/client/component/Register/Register.module.css
+++ b/client/component/Register/Register.module.css
@@ -8,6 +8,7 @@
     place-items: center;
     background: #121e26;
     color: white;
+    position: relative;
 }
 
 .divLeft{
@@ -34,6 +35,7 @@
 
 .divRight {
     height: 100%;
+    width: 100%;
     background:none;
     padding: 10px;
     text-align: center;
@@ -41,6 +43,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     gap: 1rem;
+    position: relative;
 }
 
 
@@ -80,6 +83,13 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.spanButton {
+    visibility: hidden;
 }
 
 .buttonSocial:hover{
@@ -102,7 +112,22 @@
     color:#00be7c;
 }
 
+.svg {
+    background: none;
+}
 
+.divClose {
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    padding: 5px;
+    align-items: center;
+    display: flex;
+    border-radius: 50%;
+    background: none;
+    border: 1px solid #a3b4be81;
+    cursor: pointer;
+}
 
 /* PARA EL FORMULARIO  */
 
@@ -121,4 +146,13 @@
     border: none;
     border-radius: 5px;
     padding: 10px 25px;
+}
+
+.arrowBack {
+    background: none;
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+    font-size: 20px;
+    cursor: pointer;
 }
