--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -2,7 +2,10 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  background: url('./back.jpg');
+  /* background: url('./../assets/bannerDos.webp'); */
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow-x: hidden;
 }
 
 
