--- a/client/component/Games/Games.module.css
+++ b/client/component/Games/Games.module.css
@@ -74,3 +74,15 @@
     bottom: 0px;
     left: 50%; */
 }
+
+
+@media only screen and (max-width: 1600px){
+    .cardsContainer {
+        display:grid;
+        grid-template-columns: repeat(6, 1fr);
+        align-content: center;
+        background: none;
+        gap: 5px;
+        padding: 10px 0px;
+    }
+}
