--- a/client/app/page.module.css
+++ b/client/app/page.module.css
@@ -6,3 +6,15 @@
     display: grid;
     grid-template-columns: 0.5fr 3fr;
 }
+
+@media only screen and (max-width: 1200px){
+    .divConteiner {
+        grid-template-columns: 0.75fr 3fr;
+    }
+}
+
+@media only screen and (max-width: 800px){
+    .divConteiner {
+        grid-template-columns: 1fr 2.5fr;
+    }
+}
