--- a/client/component/Slot/Slot.module.css
+++ b/client/component/Slot/Slot.module.css
@@ -1,21 +1,20 @@
-
 .iframe {
-    width: 1000px;
-    height: 750px;
+    width: 900px;
+    height: 700px;
     border-radius: 20px;
     border: none;
-    /* z-index: 100; */
+    z-index: 100;
 }
 
 .containerIframe {
-    width: 50%;
+    /* width: 100%; */
     margin: 0px auto;
     padding: 5px 0px;
     background: none;
 }
 
 .containerInfo {
-    width: 50%;
+    /* width: 100%; */
     margin: 0px auto;
     color: #ffff;
     text-align: center;
@@ -27,23 +26,38 @@
     background: none;
 }
 
-.footer {
-    /* background-image: url('../../assets/footer.webp'); */
-    /* background-repeat: no-repeat;
-    background-size: cover; */
-    position: absolute;
-    bottom: 0px;
-    z-index: -10;
-}
-
 .footerAlien {
     position: absolute;
     bottom: 0;
+    left: 5px;
 }
 
 @media only screen and (max-width: 1600px){
     .iframe {
         width: 800px;
+        height: 550px;
+    }
+}
+
+
+@media only screen and (max-width: 1200px){
+    .iframe {
+        width: 800px;
         height: 600px;
+    }
+
+    .footerAlien{
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 800px){
+    .iframe {
+        width: 750px;
+        /* height: 500px; */
+    }
+
+    .footerAlien {
+        display: none;
     }
 }
