--- a/client/app/page.module.css
+++ b/client/app/page.module.css
@@ -1,5 +1,9 @@
 .main {
     height: 100vh;
+    background-image: url('./back.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* overflow-y: hidden; */
 }
 
 .divConteiner {
