--- a/client/component/Games/Games.module.css
+++ b/client/component/Games/Games.module.css
@@ -3,6 +3,7 @@
     overflow-y: scroll;
     height: 90vh;
     min-height: 90vh;
+    padding: 10px;
     /* background: none; */
 }
 
@@ -13,6 +14,13 @@
     background: none;
     gap: 5px;
     padding: 10px 0px;
+}
+
+.allProviders{
+    padding: 20px 5px;
+    color: #ffff;
+    font-weight: 700;
+    border-bottom: 2px solid #007c51;
 }
 
 /* CARDS */
@@ -43,7 +51,7 @@
 }
 
 .containerList::-webkit-scrollbar-thumb{
-    background-color: #007c51;
+    background-color: rgba(163,180,190,.1);
     border-radius: 10px;
 }
 
@@ -59,6 +67,7 @@
     padding: 10px;
     background:rgba(163,180,190,.1);
     color: #ffff;
+    border: 1px solid #007c51
 }
 
 .button {
@@ -73,6 +82,12 @@
     /* position: absolute;
     bottom: 0px;
     left: 50%; */
+}
+
+.notFound {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
