--- a/client/component/Navbar/Navbar.module.css
+++ b/client/component/Navbar/Navbar.module.css
@@ -5,7 +5,7 @@
     padding: 20px;
     color: white;
     background: #121e26;
-    border-bottom: 2px solid #00be7c;
+    border-bottom: 2px solid rgba(163, 180, 190, 0.1);
 }
 
 .bars {
