--- a/client/app/page.module.css
+++ b/client/app/page.module.css
@@ -11,6 +11,10 @@
     grid-template-columns: 0.5fr 3fr;
 }
 
+.mobile {
+    display: none;
+}
+
 @media only screen and (max-width: 1200px){
     .divConteiner {
         grid-template-columns: 0.75fr 3fr;
@@ -21,4 +25,23 @@
     .divConteiner {
         grid-template-columns: 1fr 2.5fr;
     }
+}
+
+@media only screen and (max-width: 500px){
+    .divConteiner{
+        display: none;
+    }
+
+    .mobile {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 70vh;
+        color: #fff;
+        background: #121e26;
+    }
+
+
 }
