css changes on game

--- a/client/app/game/[id]/layout.module.css
+++ b/client/app/game/[id]/layout.module.css
@@ -3,5 +3,5 @@
     /* background: url('../../back.jpg');
   background-repeat: no-repeat;
   background-size: cover; */
-  background: rgba(99, 101, 102, 0.671);
+  background: #4054B2;
 }
