--- a/client/component/Feature/Feature.module.css
+++ b/client/component/Feature/Feature.module.css
@@ -24,3 +24,9 @@
     border: 1px solid #a3b4be81;
     cursor: pointer;
 }
+
+@media only screen and (max-width: 500px){
+    .container{
+        width: 75%;
+    }
+}
