--- a/client/component/Login/Login.module.css
+++ b/client/component/Login/Login.module.css
@@ -43,7 +43,7 @@
     border-radius: 10px;
     padding: 15px 30px;
     color: #ffff;
-    width: 50%;
+    width: 48%;
     cursor: pointer;
 }
 
@@ -69,3 +69,112 @@
     border: 1px solid #a3b4be81;
     cursor: pointer;
 }
+
+.imagenUser {
+    border-radius: 50%;
+}
+
+@media only screen and (max-width: 1600px){
+    .form {
+        gap: 1rem;
+        width: 35%;
+        height: 50%;
+        border-radius: 20px;
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background: #121e26;
+        color: white;
+        position: relative;
+    }
+
+    .button {
+        background: #00be7c;
+        border: none;
+        border-radius: 10px;
+        padding: 15px 30px;
+        color: #ffff;
+        width: 50%;
+        cursor: pointer;
+    }
+}
+
+@media only screen and (max-width: 1200px){
+    /* .form {
+        gap: 1rem;
+        width: 35%;
+        height: 50%;
+        border-radius: 20px;
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background: #121e26;
+        color: white;
+        position: relative;
+    } */
+
+    .button {
+        background: #00be7c;
+        border: none;
+        border-radius: 10px;
+        padding: 15px 30px;
+        color: #ffff;
+        width: 55%;
+        cursor: pointer;
+    }
+}
+
+@media only screen and (max-width: 800px){
+    .form {
+        gap: 1rem;
+        width: 50%;
+        height: 50%;
+        border-radius: 20px;
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background: #121e26;
+        color: white;
+        position: relative;
+    }
+
+    .button {
+        background: #00be7c;
+        border: none;
+        border-radius: 10px;
+        padding: 15px 30px;
+        color: #ffff;
+        width: 57%;
+        cursor: pointer;
+    }
+}
+
+@media only screen and (max-width: 500px){
+    .form {
+        gap: 1rem;
+        width: 90%;
+        height: 75%;
+        border-radius: 20px;
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background: #121e26;
+        color: white;
+        position: relative;
+    }
+
+    .button {
+        background: #00be7c;
+        border: none;
+        border-radius: 10px;
+        padding: 15px 30px;
+        color: #ffff;
+        width: 70%;
+        cursor: pointer;
+    }
+}
+
