--- a/client/component/Register/Register.module.css
+++ b/client/component/Register/Register.module.css
@@ -161,3 +161,40 @@
     background: none;
     color: red;
 }
+
+@media only screen and (max-width: 1600px){
+    .container {
+        width: 45%;   
+    }
+}
+
+@media only screen and (max-width: 1200px){
+    .container {
+        width: 60%;   
+    }
+}
+
+@media only screen and (max-width: 800px){
+    .container {
+        width: 90%;   
+    }
+}
+
+@media only screen and (max-width: 500px){
+    .container {
+        width: 100%;
+        height: 70%;
+        border-radius: 20px;
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 5px;
+        place-items: center;
+        background: #121e26;
+        color: white;
+        position: relative;
+    }
+
+    .divLeft{
+        display: none;
+    }
+}
