--- a/client/component/Register/Register.module.css
+++ b/client/component/Register/Register.module.css
@@ -172,12 +172,17 @@
     .container {
         width: 60%;   
     }
+    .title {
+        font-size: 1.25rem;
+    }
 }
 
 @media only screen and (max-width: 800px){
     .container {
-        width: 90%;   
+        width: 90%;  
+        height: 90%;
     }
+    
 }
 
 @media only screen and (max-width: 500px){
